hphp/hack/test/typecheck/classname_missing_param_error.php
<?hh

final class TestClass {
  private keyset<classname> $test = keyset[];
}
